<resources>
    <string name="app_name">amaysim</string>
    <string name="welcome_to">Welcome to</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="log_in">Log in</string>
    <string name="msn_number">0468874507</string>
    <string name="loading">Loading</string>
    <string name="connecting_to_server">Connecting to server</string>
    <string name="placeholder_date">Dec 1 1991</string>
    <string name="expiry">Expiry:</string>
    <string name="slash">/</string>
    <string name="placeholder_3000mb">3000MB</string>
    <string name="data_usage">Data Usage: </string>
    <string name="placeholder_2000usd">$2000</string>
    <string name="price">Price:</string>
</resources>
